# gharial

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
config/: init
config/init-rs/: Cargo.toml
config/init-rs/src/: desktop.rs  ipc.rs  main.rs
crates/gharial/: Cargo.toml
crates/gharial-ipc/: Cargo.toml
crates/gharial-ipc/examples/: typed_config.rs
crates/gharial-ipc/src/: action.rs  client.rs  color.rs  config.rs  edge.rs  keysyms.rs  lib.rs  output.rs  value.rs
crates/gharial/examples/: rust_init.rs
crates/gharial/protocol/: README.md
crates/gharial/src/: action.rs  client.rs  keysyms.rs  layout.rs  lib.rs  main.rs  orientation.rs  wayland_proto.rs
crates/gharial/src/ipc/: dispatch.rs  mod.rs  tests.rs
crates/gharial/src/ipc/handlers/: bind.rs  layout.rs  misc.rs  mod.rs  mode.rs  output.rs  tag.rs  window.rs
crates/gharial/src/state/: mod.rs  parser.rs  tests.rs
crates/gharial/src/wm/: actions.rs  bindings.rs  focus.rs  globals.rs  links.rs  mod.rs  modes.rs  outputs.rs  render.rs  seats.rs  sequence.rs  spatial.rs  tags.rs  windows.rs  world.rs
crates/gharial/src/wm/actions/: focus.rs  layout.rs  mod.rs  mode.rs  output.rs  spawn.rs  tag.rs  window.rs
crates/gharial/src/wm/dispatch/: layer_shell.rs  manager.rs  mod.rs  output.rs  seat.rs  window.rs  wl_output.rs  xkb_binding.rs
crates/gharial/tests/: api_smoke.rs
crates/gharialctl/: Cargo.toml
crates/gharialctl/src/: args.rs  main.rs  usage.rs  wait.rs
