[workspace]
resolver = "2"
members = [
    "crates/gharial",
    "crates/gharialctl",
    "crates/gharial-ipc",
    "config/init-rs",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["gusahlg"]
repository = "https://github.com/gusahlg/gharial"
rust-version = "1.75"

[workspace.dependencies]
gharial-ipc = { path = "crates/gharial-ipc" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = 3
